<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, NEAKConfiguratorActivity!</string>
    <string name="app_name">NEAK Configurator</string>
    <string name="governor_title">Governors</string>
    <string name="kernel_options_title">Kernel Options</string>
    <string name="conservative_enable_text">Conservative Governor</string>
    <string name="lionheart_enable_text">Lionheart Tweaks</string>
    <string name="lionheart_description_text">Note: Lionheart tweaks are modifications for the Conservative Governor. Once enabled
        the Conservative Governor will have the Lionheart tweaks activated.</string>
    <string name="lazy_enable_text">Lazy Governor</string>
    <string name="other_title">Other Options</string>
    <string name="sched_mc_enable_text">SCHED_MC</string>
    <string name="aftr_idle_enable_text">AFTR Idle Mode</string>
    <string name="ext4_boost_enable_text">Ext4 Boost Optimizations</string>
    <string name="apply_no_reboot">Apply Settings (Reboot later)</string>
    <string name="apply_reboot">Apply Settings and Reboot</string>
    <string name="ota_title">NEAK OTA App</string>
    <string name="ota_status">OTA App status: Not Installed</string>
    <string name="download_ota">Download OTA App</string>
    <string name="app_url">http://mirror.zantekk.de/neak/ota-app-builds/NEAK-OTA-Updater.apk</string>
    <string name="app_path">/sdcard/NEAK-OTA-Updater.apk</string>
    <string name="app_final">/data/app/NEAK-OTA-Updater.apk</string>
    <string name="ota_hello">By clicking here you are going to download the N.E.A.K. OTA Updater App</string>
    <string name="hello2">Please be sure you are connected to internet via WiFi or 3G</string>
    <string name="buttontext">DOWNLOAD AND INSTALL APP</string>
    <string name="buffer"> </string>
    <string name="lagfree_enable_text">Lagfree Governor</string>
    <string name="about_title">About</string>
    <string name="about_description">
        This app is for controlling the NEAK kernel options without having to use the CWM Recovery\n
        This app is also used for downloading the NEAK kernel OTA updater App\n
        \n
        The current options that this app can control are:\n
        Conservative Governor\n
        Lionheart Tweaks (for Conservative Governor)\n
        Lazy Governor\n
        Lagfree Governor\n
        SCHED_MC\n
        Aftr Idle Mode\n
        \n
        Settings require a reboot for the relevant modules to be loaded or removed\n
        This app gives 2 options for applying settings, you can apply setting and reboot later, or apply settings and reboot now\n
        \n
        The NEAK OTA section of this app will show the current installation status of the NEAK OTA Updator App 
        and have a button for downloading the app\n
        \n
        For help with this app, please go to:\n
        http://forum.xda-developers.com/showthread.php?t=1430137
        </string>
    <string name="about_copyright">Copyright NEAR Team 2012</string>
    <string name="about_coding_title">Coding by:</string>
    <string name="about_coder1">NRK_2K</string>
    <string name="about_coder2">Simone201</string>
    <string name="about_button_text">Close</string>
    <string name="about_kernel_version_text">Kernel Version: Reading Version</string>
   

</resources>