<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="fill_parent"
   	android:layout_height="fill_parent"
   	android:orientation="vertical"
   	android:overScrollMode="always"
   	android:scrollbarStyle="outsideOverlay"
   	xmlns:android="http://schemas.android.com/apk/res/android">
		
    <LinearLayout android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="vertical">
	    
    	<TextView
	        android:id="@+id/textView_kernelOptions"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/kernel_options_title"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	
	    <TextView
	        android:id="@+id/textView_Governors"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/governor_title"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	
	    <CheckBox
	        android:id="@+id/checkBox_conservative"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/conservative_enable_text" />
	
		<CheckBox
	        android:id="@+id/checkBox_lionheart"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/lionheart_enable_text" />
	    <TextView
			android:id="@+id/textView_lionheartNotes"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/lionheart_description_text"
			android:textAppearance="?android:attr/textAppearanceSmall" />
			
		<CheckBox
	        android:id="@+id/checkBox_lazy"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/lazy_enable_text" />
	
		<TextView
	        android:id="@+id/textView_lazyNotes"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/other_title"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
		<CheckBox
	        android:id="@+id/checkBox_sched_mc"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/sched_mc_enable_text" />
	       
	    <CheckBox
	        android:id="@+id/checkBox_aftr"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/aftr_idle_enable_text" />
	    
	    <CheckBox
	        android:id="@+id/checkBox_ext4"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/ext4_boost_enable_text" />
	    
	    <Button
	        android:id="@+id/button_applyNoBoot"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/apply_no_reboot" />
	
	
		<Button
	        android:id="@+id/button_applyBoot"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/apply_reboot" />
	
		</LinearLayout>
	
</ScrollView>