<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	android:layout_width="fill_parent"
   	android:layout_height="fill_parent"
   	android:orientation="vertical"
   	xmlns:android="http://schemas.android.com/apk/res/android">
   	
       <TextView
	    android:id="@+id/textView_otaTitle"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/ota_title"
	    android:textAppearance="?android:attr/textAppearanceLarge" />

	<TextView
	    android:id="@+id/textView_otaStatus"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/ota_status"
	    android:textAppearance="?android:attr/textAppearanceMedium" />


	<Button
	    android:id="@+id/button_downloadOTA"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/download_ota" />

</LinearLayout>
